fix overflow

--- a/src/mystyle.scss
+++ b/src/mystyle.scss
@@ -69,6 +69,10 @@
     .rigth {
         display: flex;
         justify-content: flex-end;
+
+        img {
+            width: 40%;
+        }
     }
 }
 
